Bug 1427507 - Ensure newly selected trash folder is enabled and has trash icon. r=jorgk